<resources>
    <string name="app_name">Near By Places</string>
    <string name="action_settings">Settings</string>
    <string name="open_now">Open now</string>
    <string name="closed">Closed</string>
    <string name="contact_details">Call</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="website">Website</string>
    <string name="directions">Directions</string>
    <string name="action_share">Share</string>
    <string name="share_text">Check this one place </string>
    <string name="share_direction"> direction</string>
    <string name="network_msg">You are not connected to the Internet. Please connect and retry.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_widget_text">No recently viewed place</string>
    <string name="viewed_place">Recently viewed place</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="share">Share the place</string>
    <string name="app_version">2.0</string>
    <string name="location_message">Could not get your current location.</string>
    <string name="location_error_message">Error when trying to get current location</string>
    <string name="location_permission_denied">Location permission denied.</string>
   <string name="fetching_location">Trying to fetch current location.</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="no_data">No results found!</string>
    <string name="server_error">Server Error!</string>
    <string name="reviews">Google reviews</string>
    <string name="detail_not_found">Detail for this place not found!</string>

    <!-- Label for the distance units preference [CHAR LIMIT=30] -->
    <string name="pref_units_label">Distance Units</string>

    <!-- Label for miles option in distance unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_mile">Mile</string>

    <!-- Label for kilometer option in distance unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_km">Kilometer</string>

    <!-- Key name for distance unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Value in SharedPreferences for miles distance unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_mile" translatable="false">mile</string>

    <!-- Value in SharedPreferences for kilometer distance unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_km" translatable="false">kilometer</string>

    <string name="browse_more">View More Places</string>
</resources>

